Thu Dec 20 15:55:46 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl.c: do not use FIPS_mode_set if not available.
	* test/openssl/utils.rb: revise comment about setting FIPS mode to
	  false.
	* test/openssl/test_fips.rb: remove tests that cause errors on
	  ruby-ci.
	  [Feature #6946] [ruby-core:47345]

Thu Dec 20 15:22:59 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parser/ruby.rb:  Ignore methods defined on constants to
	  prevent modules with the names of constants from appearing in the
	  documentation.
	* test/rdoc/test_rdoc_parser_ruby.rb:  Test for the above.

Thu Dec 20 15:00:33 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl_cipher.c: add support for Authenticated Encryption
	  with Associated Data (AEAD) for OpenSSL versions that support the
	  GCM encryption mode. It's the only mode supported for now by OpenSSL
	  itself. Add Cipher#authenticated? to detect whether a chosen mode
	  does support Authenticated Encryption.
	* test/openssl/test_cipher.rb: add tests for Authenticated Encryption.
	  [Feature #6980] [ruby-core:47426] Thank you, Stephen Touset for
	  providing a patch!

Thu Dec 20 12:56:53 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/markup/to_html.rb (class RDoc):  Added current heading and
	  top links to headings.
	* lib/rdoc/generator/template/darkfish/rdoc.css:  ditto
	* test/rdoc/test_rdoc_generator_markup.rb:  Test for above
	* test/rdoc/test_rdoc_markup_to_html.rb:  ditto

	* test/rdoc/test_rdoc_comment.rb:  Removed trailing whitespace.

Thu Dec 20 11:05:26 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_valid_syntax): move from
	  test_syntax.rb.

	* test/ruby/envutil.rb (assert_normal_exit): validate syntax before
	  running because this assertion passes even if the code fails by
	  SyntaxError.

Thu Dec 20 10:29:58 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_dh.rb: revert special treatment of