@@ -1,3 +1,11 @@
+Thu Dec 20 16:39:04 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>
+
+	* ext/openssl/ossl_cipher.c: fix errors for installations that do not
+	  feature Authenticated Encryption.
+	* ext/openssl/extconf.rb: detect presence of EVP_CTRL_GCM_GET_TAG to
+	  determine whether Authenticated Encryption can be used.
+	  [Feature #6980] [ruby-core:47426]
+
 Thu Dec 20 15:55:46 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>
 
 	* ext/openssl/ossl.c: do not use FIPS_mode_set if not available.
